[gd_scene load_steps=7 format=3 uid="uid://kmjj85cyhk4v"]

[ext_resource type="AudioStream" uid="uid://j0oi1mqp4eyt" path="res://Audio/ChicaGhoulMusic_241005.ogg" id="1_43lxj"]
[ext_resource type="Script" path="res://Scenes/menu_ui.gd" id="2_f0lrt"]
[ext_resource type="Theme" uid="uid://dl3v5hf6lki77" path="res://UI Themes/Menu/MainMenuButton.tres" id="2_h2okw"]
[ext_resource type="Theme" uid="uid://cu0pw7n870jsv" path="res://UI Themes/Menu/Title.tres" id="3_i3ce2"]
[ext_resource type="Theme" uid="uid://dku7m3f7x5tsc" path="res://UI Themes/Menu/CreditsHeader.tres" id="3_ufib3"]
[ext_resource type="Theme" uid="uid://dp8m2du2vmyg6" path="res://UI Themes/Menu/CreditsBody.tres" id="4_glyhc"]

[node name="Main Menu" type="Node2D"]

[node name="Background Audio Loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_43lxj")
autoplay = true

[node name="Menu UI" type="CanvasLayer" parent="." node_paths=PackedStringArray("credits_container", "main_container")]
script = ExtResource("2_f0lrt")
credits_container = NodePath("Credits Roll")
main_container = NodePath("Main Buttons")

[node name="Main Buttons" type="VBoxContainer" parent="Menu UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -79.0
offset_right = 55.5
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title Label" type="Label" parent="Menu UI/Main Buttons"]
layout_mode = 2
theme = ExtResource("3_i3ce2")
text = "Spooky Corporate"

[node name="Start Button" type="Button" parent="Menu UI/Main Buttons"]
layout_mode = 2
theme = ExtResource("2_h2okw")
text = "Start"

[node name="Credits Button" type="Button" parent="Menu UI/Main Buttons"]
layout_mode = 2
theme = ExtResource("2_h2okw")
text = "Credits"

[node name="Quit Button" type="Button" parent="Menu UI/Main Buttons"]
layout_mode = 2
theme = ExtResource("2_h2okw")
text = "Quit"

[node name="Credits Roll" type="VBoxContainer" parent="Menu UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -115.0
offset_right = 99.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2

[node name="Programmers Heading" type="Label" parent="Menu UI/Credits Roll"]
layout_mode = 2
theme = ExtResource("3_ufib3")
text = "Programming"

[node name="Programmers Body" type="Label" parent="Menu UI/Credits Roll"]
layout_mode = 2
theme = ExtResource("4_glyhc")
text = "Hello World"

[node name="Artists Heading" type="Label" parent="Menu UI/Credits Roll"]
layout_mode = 2
theme = ExtResource("3_ufib3")
text = "Art"

[node name="Artists Body" type="Label" parent="Menu UI/Credits Roll"]
layout_mode = 2
theme = ExtResource("4_glyhc")
text = "Hello World"

[node name="Audio Heading" type="Label" parent="Menu UI/Credits Roll"]
layout_mode = 2
theme = ExtResource("3_ufib3")
text = "Audio"

[node name="Audio Body" type="Label" parent="Menu UI/Credits Roll"]
layout_mode = 2
theme = ExtResource("4_glyhc")
text = "Hello World"

[node name="Back Button" type="Button" parent="Menu UI/Credits Roll"]
layout_mode = 2
theme = ExtResource("2_h2okw")
text = "Back"

[connection signal="pressed" from="Menu UI/Main Buttons/Start Button" to="Menu UI" method="_on_start_button_pressed"]
[connection signal="pressed" from="Menu UI/Main Buttons/Credits Button" to="Menu UI" method="_on_credits_button_pressed"]
[connection signal="pressed" from="Menu UI/Main Buttons/Quit Button" to="Menu UI" method="_on_quit_button_pressed"]
[connection signal="pressed" from="Menu UI/Credits Roll/Back Button" to="Menu UI" method="_on_back_button_pressed"]
